Changelog
=========


2.3.2 (unreleased)
------------------

- Nothing changed yet.


2.3.1 (2012-03-02)
------------------

- Fixed Typoerror in translation.
  [phgross]


2.3 (2012-03-01)
----------------

- Accept Forwarding: Allways reset the is_only_assign flag, when start accepting.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387/
  [phgross]

- Adjust some translations.
  [phgross]

- Fixed completing task process:
  - Add relations for seleted documents from the dossier.
  - Add the documents also in the local response not only on the remote task.
  Issue #1344 Aufgabe erledigen bzw. abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1344/
  [phgross]

- Fixed addresponse functionality: Avoid to add a allready existing relations.
  Issue #1431 Task: doppelter Verweis auf ein Dokument ist moeglich.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1431/view
  [phgross]


2.2 (2012-02-27)
----------------

- Adjust the is_issuer in the transitioncontroller:
  it can now handle also inbox principals.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387
  [phgross]

- Adjust the statesyncer: forwarding predesscors should not be synced.
  [phgross]

- Add "predecessor" index and metadata to catalog.
  [jone]

- Disable close_successor_wizard for forwarding successor tasks.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387
  [phgross]

- When completing a successor task, let the user report all documents in the dossier.
  Issue #1344 Aufgabe erledigen bzw. abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1344
  [jone]
